--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a href="https://github.com/aliza614">Github</a>
                 </li>
                 <li>
-                    <a href="https://medium.com/@aliza614">Medium</a>
+                    <a href="https://aliza614.github.io/">Website</a>
                 </li>
             </ul>
         </div>
