--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 
         <div class="column-2">
             <h1>About me</h1>
-            <p>Hi! I'm Aliza, a web developer and Computer Science student at TrueCoders. This site is a sample website for the what I can do. I think every website should look pretty and attractive, blame that on my feminine approach to programming. 
+            <p>Hi! I'm Aliza, a web developer and Computer Science student at TrueCoders. This site is a sample website for what I can do. I think every website should look pretty and attractive, blame that on my feminine approach to programming. 
              </p> 
              <p>I get my love for programming from my Computer Science minor at Queens College which I attended in 2009.  I graduated there with a 4 year degree in 2 years (my resume does not have a typo) and am proud and grateful to have been on the dean's list every semester.  I've been happily coding away ever since!</p>
             <p>Please email me with your questions or comments: AlizaOconnor@yahoo.com</p>    
