--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="https://docs.google.com/document/d/1TIwh_Sk7P-IskUP7RkPBSwyoY4hJFdibIFBSiN2wdpc/export?format=pdf" class="btn">Download Resume</a>
         </div>
         <div>
-            <form method="post" action="htdocs/send_email_to_nechama.php">
+            <form method="post" action="send_email_to_nechama.php">
 			<label>First Name <input type="text" name="fname" required /></label>
 			<!--<label>Last Name <input type="text" name="lname" required /></label><br/>
 			<label>Email <input type="email" name="email" required /><br/></label>
